--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -691,6 +691,7 @@
             </div>
             <a class="coach_index" th:href="@{course/coach_dashboard}" style="text-align:center;justify-content: center" >教練主頁入口</a>
             <a class="forumpost_index" th:href="@{forumpost/select_page}" style="text-align:center;justify-content: center" >入口</a>
+            <a class="forumreply_index" th:href="@{forumreply/select_page}" style="text-align:center;justify-content: center" >入口2</a>
         
         </div>
 
