--- a/src/main/resources/templates/front-end/mj/course_filter_two_toggle.html
+++ b/src/main/resources/templates/front-end/mj/course_filter_two_toggle.html
@@ -824,7 +824,7 @@
                             <h1 class="title mb--0">所有課程</h1>
 
                         </div>
-                        <p class="description">Courses that help beginner designers become true unicorns. </p>
+                        <p class="description">在這裡找到所有你想上的健身課程！ </p>
                     </div>
                 </div>
             </div>
@@ -1176,13 +1176,13 @@
                                     <div class="rbt-author-meta mb--10">
                                         <div class="rbt-avater">
                                             <a th:href="@{'/course_details_2'}">
-                                                <!--   <img class="userHeadshot" th:data-user-id="${courseData.userVO.uId}"  alt="Sophia Jaymes">-->
+                                                   <img class="userHeadshot" th:data-user-id="${courseData.uId}"  alt="Coach Image">
                                                 <!--   <img th:src="@{/assets/images/client/avatar-02.png}"-->
                                             </a>
                                         </div>
                                         <div class="rbt-author-info">
 
-                                            <!--     By <span th:text="${courseData.userVO.uName}"></span>-->
+                                                 By <span th:text="${courseData.uNickName}"></span>
                                         </div>
                                     </div>
                                     <div class="rbt-card-bottom">
