--- a/src/main/resources/templates/front-end/header.html
+++ b/src/main/resources/templates/front-end/header.html
@@ -78,6 +78,7 @@
                         <li class="access-icon">
                             <a class=" rbt-round-btn" href="#">
                                 <i class="feather-bell"></i>
+                                <span class="rbt-cart-count">4</span>
                             </a>
                         </li>
 
