--- a/src/main/resources/templates/front-end/user/user_forget_password.html
+++ b/src/main/resources/templates/front-end/user/user_forget_password.html
@@ -1112,6 +1112,13 @@
             </div>
         </div>
     </div>
+    <div id="processingNotification"
+        style="display:none; position:fixed; left:0; top:0; width:100%; height:100%; background-color:rgba(0,0,0,0.5); z-index:1000;">
+        <div
+            style="position:absolute; top:50%; left:50%; transform:translate(-50%, -50%); background-color:white; padding:20px; border-radius:5px;">
+            資料處理中，請稍候...
+        </div>
+    </div>
 
 
 
@@ -1198,6 +1205,7 @@
             // 監聽表單提交
             checkEmailForm.addEventListener('submit', function (e) {
                 e.preventDefault(); // 阻止表單的默認提交行為
+                document.getElementById("processingNotification").style.display = "flex";
 
                 // 使用fetch發送POST請求
                 fetch('/user_api/send_password_mail', {
@@ -1209,6 +1217,7 @@
                 })
                     .then(response => response.json())
                     .then(data => {
+                        document.getElementById("processingNotification").style.display = "none";
                         if (data === 0) {
                             // 隱藏check-email表單，顯示change-password表單
                             checkEmailForm.style.display = 'none';
@@ -1218,7 +1227,7 @@
                             alert('此email未註冊, 請重新輸入或註冊本站!');
                             sendVerificationButton.disabled = true;
                             emailInput.value = '';
-                        }else if (data === 2) {
+                        } else if (data === 2) {
                             // 顯示錯誤訊息，重新鎖定"寄送驗證碼到信箱"按鈕，並清空email欄位
                             alert('伺服器異常, 請稍後再試或通知站方處理!');
                             sendVerificationButton.disabled = true;
@@ -1303,55 +1312,55 @@
         });
     </script>
 
-<script>
-    document.addEventListener('DOMContentLoaded', function() {
-        var emailInput = document.querySelector('.check-email input[name="con_email"]');
-        var passwordInput = document.querySelector('.change-password input[name="u_password"]');
-        var verificationCodeInput = document.querySelector('.change-password input[name="verification_code"]');
-        var changePasswordForm = document.querySelector('.change-password');
-    
-        changePasswordForm.addEventListener('submit', function(e) {
-            e.preventDefault(); // 防止表單默認提交
-    
-            // 構造POST請求體
-            var postData = {
-                u_email: emailInput.value,
-                u_password: passwordInput.value,
-                verification_code: verificationCodeInput.value
-            };
-    
-            fetch('/user_api/user_forget_password', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json',
-                },
-                body: JSON.stringify(postData)
-            })
-            .then(response => response.json())
-            .then(data => {
-                switch(data) {
-                    case 0:
-                        window.location.href = '/user/force_user_login/'; // 跳轉至登錄頁面
-                        break;
-                    case 1:
-                        alert("驗證碼錯誤");
-                        verificationCodeInput.value = ''; // 清空驗證碼欄位
-                        break;
-                    case 2:
-                        alert("驗證碼已過期, 請重新取得驗證碼!");
-                        break;
-                    default:
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            var emailInput = document.querySelector('.check-email input[name="con_email"]');
+            var passwordInput = document.querySelector('.change-password input[name="u_password"]');
+            var verificationCodeInput = document.querySelector('.change-password input[name="verification_code"]');
+            var changePasswordForm = document.querySelector('.change-password');
+
+            changePasswordForm.addEventListener('submit', function (e) {
+                e.preventDefault(); // 防止表單默認提交
+
+                // 構造POST請求體
+                var postData = {
+                    u_email: emailInput.value,
+                    u_password: passwordInput.value,
+                    verification_code: verificationCodeInput.value
+                };
+
+                fetch('/user_api/user_forget_password', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                    },
+                    body: JSON.stringify(postData)
+                })
+                    .then(response => response.json())
+                    .then(data => {
+                        switch (data) {
+                            case 0:
+                                window.location.href = '/user/force_user_login/'; // 跳轉至登錄頁面
+                                break;
+                            case 1:
+                                alert("驗證碼錯誤");
+                                verificationCodeInput.value = ''; // 清空驗證碼欄位
+                                break;
+                            case 2:
+                                alert("驗證碼已過期, 請重新取得驗證碼!");
+                                break;
+                            default:
+                                alert("伺服器異常, 請稍後再試或聯絡站方!");
+                        }
+                    })
+                    .catch(error => {
+                        console.error('Error:', error);
                         alert("伺服器異常, 請稍後再試或聯絡站方!");
-                }
-            })
-            .catch(error => {
-                console.error('Error:', error);
-                alert("伺服器異常, 請稍後再試或聯絡站方!");
+                    });
             });
         });
-    });
     </script>
-    
+
 
 
 
